RESOLVED FIXED225078
[RenderTreeBuilder] ASSERTION FAILED: ancestor->style().columnSpan() != ColumnSpan::All || !isValidColumnSpanner(fragmentedFlow, *ancestor) in WebCore::isValidColumnSpanner
https://bugs.webkit.org/show_bug.cgi?id=225078
Summary [RenderTreeBuilder] ASSERTION FAILED: ancestor->style().columnSpan() != Colum...
alan
Reported 2021-04-26 14:46:53 PDT
Attachments
Patch (4.68 KB, patch)
2021-04-26 15:07 PDT, alan
no flags
alan
Comment 1 2021-04-26 15:07:07 PDT
EWS
Comment 2 2021-04-27 07:07:04 PDT
Committed r276637 (237065@main): <https://commits.webkit.org/237065@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427096 [details].
Note You need to log in before you can comment on or make changes to this bug.