[RenderTreeBuilder] ASSERTION FAILED: ancestor->style().columnSpan() != ColumnSpan::All || !isValidColumnSpanner(fragmentedFlow, *ancestor) in WebCore::isValidColumnSpanner https://bugs.webkit.org/show_bug.cgi?id=225078 <rdar://76127681>

Reviewed by Antti Koivisto.

Source/WebCore:

MultiColumnBuilder::multiColumnDescendantInserted() expects up-to-date fragmentedFlowState on the newly inserted renderer.

Test: fast/multicol/nested-spanner-assert.html

* rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::normalizeTreeAfterStyleChange):
(WebCore::RenderTreeBuilder::childFlowStateChangesAndAffectsParentBlock):

LayoutTests:

* fast/multicol/nested-spanner-assert-expected.txt: Added.
* fast/multicol/nested-spanner-assert.html: Added.


Canonical link: https://commits.webkit.org/237065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276637 268f45cc-cd09-0410-ab3c-d52691b4dbfc